--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CV — Compositor · VFX Artist · Animator</title>
-    <meta name="description" content="Professional portfolio and CV of an experienced VFX compositor, animator, and visual effects artist." />
-    <meta name="author" content="Your Name" />
-    <link rel="canonical" href="https://yourname.com" />
+    <title>Ivan Gegov — Senior Animator / Animation Lead · VFX · Compositing</title>
+    <meta name="description" content="Portfolio and CV of Ivan Gegov, Senior Animator / Animation Lead specializing in compositing and VFX." />
+    <meta name="author" content="Ivan Gegov" />
 
-    <meta property="og:title" content="CV — Compositor · VFX Artist · Animator" />
-    <meta property="og:description" content="Professional portfolio and CV — VFX, compositing, and animation." />
+    <meta property="og:title" content="Ivan Gegov — Senior Animator / Animation Lead · VFX · Compositing" />
+    <meta property="og:description" content="Portfolio and CV — Senior Animator / Animation Lead, VFX, and compositing." />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
