--- a/index.html
+++ b/index.html
@@ -3,48 +3,90 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ivan Gegov — Senior Animator / Animation Lead · VFX · Compositing</title>
-    <meta name="description" content="Portfolio and CV of Ivan Gegov, Senior Animator / Animation Lead specializing in compositing and VFX." />
+    <title>Ivan Gegov - Senior Animator and Animation Lead | VFX Portfolio</title>
+    <meta
+      name="description"
+      content="Portfolio and CV of Ivan Gegov, Senior Animator and Animation Lead specializing in compositing and VFX."
+    />
     <meta name="author" content="Ivan Gegov" />
+    <meta name="robots" content="index,follow,max-image-preview:large" />
+    <meta name="theme-color" content="#f9f7f2" />
+    <link rel="canonical" href="https://vfxportfolio.lovable.app/" />
+    <link rel="icon" href="/favicon.ico" />
 
-    <meta property="og:title" content="Ivan Gegov — Senior Animator / Animation Lead · VFX · Compositing" />
-    <meta property="og:description" content="Portfolio and CV — Senior Animator / Animation Lead, VFX, and compositing." />
+    <meta
+      property="og:title"
+      content="Ivan Gegov - Senior Animator and Animation Lead | VFX Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Studio-grade animation, compositing, and VFX portfolio by Ivan Gegov."
+    />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://vfxportfolio.lovable.app/" />
+    <meta property="og:site_name" content="Ivan Gegov VFX Portfolio" />
+    <meta
+      property="og:image"
+      content="https://vfxportfolio.lovable.app/assets/slackPic.png"
+    />
+    <meta property="og:image:alt" content="Portrait of Ivan Gegov" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="theme-color" content="#ffffff" />
-    <link rel="canonical" href="https://vfxportfolio.lovable.app/" />
-    <meta property="og:image" content="/assets/slackPic.png" />
-    <meta property="og:url" content="https://vfxportfolio.lovable.app/" />
-    <meta property="og:site_name" content="Ivan Gegov — VFX Portfolio" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <meta
+      name="twitter:title"
+      content="Ivan Gegov - Senior Animator and Animation Lead | VFX Portfolio"
+    />
+    <meta
+      name="twitter:description"
+      content="Studio-grade animation, compositing, and VFX portfolio by Ivan Gegov."
+    />
+    <meta
+      name="twitter:image"
+      content="https://vfxportfolio.lovable.app/assets/slackPic.png"
+    />
 
-    <style>
-      .skip-link:focus { position: static; left: auto; width: auto; height: auto; padding: 8px 12px; background: #000; color: #fff; border-radius: 4px; z-index: 9999; }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap"
+      onload="this.rel='stylesheet'"
+    />
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap"
+        rel="stylesheet"
+      />
+    </noscript>
 
-    <!-- Preconnect and preload Google Fonts for faster font delivery -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" onload="this.rel='stylesheet'">
-    <noscript><link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet"></noscript>
-
-    <!-- Structured data: Person -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Ivan Gegov",
-      "jobTitle": "Senior Animator / Animation Lead",
-      "url": "https://vfxportfolio.lovable.app/",
-      "image": "https://vfxportfolio.lovable.app/assets/slackPic.png",
-      "sameAs": ["https://youtu.be/ogwVYZrWI6s","https://vimeo.com/283914588"]
-    }
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "Person",
+            "@id": "https://vfxportfolio.lovable.app/#person",
+            "name": "Ivan Gegov",
+            "jobTitle": "Senior Animator / Animation Lead",
+            "url": "https://vfxportfolio.lovable.app/",
+            "image": "https://vfxportfolio.lovable.app/assets/slackPic.png",
+            "sameAs": ["https://youtu.be/ogwVYZrWI6s", "https://vimeo.com/283914588"]
+          },
+          {
+            "@type": "CollectionPage",
+            "@id": "https://vfxportfolio.lovable.app/#page",
+            "url": "https://vfxportfolio.lovable.app/",
+            "name": "Ivan Gegov - VFX Portfolio",
+            "about": { "@id": "https://vfxportfolio.lovable.app/#person" }
+          }
+        ]
+      }
     </script>
   </head>
 
   <body>
-    <a href="#main" class="skip-link" style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">Skip to content</a>
+    <a href="#main" class="skip-link">Skip to content</a>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
